Add user info endpoint and command
